cmake_minimum_required(VERSION 3.10)
project(__{project_name}__ )

set(SOURCE_DIR ${RTOS_DIR}/components/ssl)

set(MBEDTLS_SRC
        ${SOURCE_DIR}/mbedtls/mbedtls/library/aes.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/camellia.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/des.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/entropy_poll.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/md.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/pkcs11.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/rsa.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ssl_cookie.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/x509.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/aesni.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ccm.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/dhm.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/error.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/md_wrap.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/pkcs12.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/rsa_internal.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ssl_srv.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/x509_create.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/arc4.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/certs.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ecdh.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/gcm.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/memory_buffer_alloc.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/pkcs5.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/sha1.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ssl_ticket.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/x509_crl.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/asn1parse.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/cipher.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ecdsa.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/havege.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/net_sockets.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/pkparse.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/sha256.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ssl_tls.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/x509_crt.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/asn1write.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/cipher_wrap.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ecjpake.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/hmac_drbg.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/oid.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/pk_wrap.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/sha512.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/threading.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/x509_csr.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/base64.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/cmac.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ecp.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/md2.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/padlock.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/pkwrite.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ssl_cache.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/timing.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/x509write_crt.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/bignum.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ctr_drbg.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ecp_curves.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/md4.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/pem.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/platform.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ssl_ciphersuites.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/version.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/x509write_csr.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/blowfish.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/debug.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/entropy.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/md5.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/pk.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ripemd160.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/ssl_cli.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/version_features.c
        ${SOURCE_DIR}/mbedtls/mbedtls/library/xtea.c

        ${SOURCE_DIR}/mbedtls/port/esp8266/esp_hardware.c
        ${SOURCE_DIR}/mbedtls/port/esp8266/mbedtls_debug.c
        ${SOURCE_DIR}/mbedtls/port/esp8266/net.c

        ${SOURCE_DIR}/mbedtls/port/openssl/source/library/ssl_cert.c
        ${SOURCE_DIR}/mbedtls/port/openssl/source/library/ssl_lib.c
        ${SOURCE_DIR}/mbedtls/port/openssl/source/library/ssl_methods.c
        ${SOURCE_DIR}/mbedtls/port/openssl/source/library/ssl_pkey.c
        ${SOURCE_DIR}/mbedtls/port/openssl/source/library/ssl_stack.c
        ${SOURCE_DIR}/mbedtls/port/openssl/source/library/ssl_x509.c

        ${SOURCE_DIR}/mbedtls/port/openssl/source/platform/ssl_pm.c
        ${SOURCE_DIR}/mbedtls/port/openssl/source/platform/ssl_pm_extend.c
        )

set(NOT_MBEDTLS_SRC
        ${SOURCE_DIR}/axtls/source/ssl/ssl_asn1.c
        ${SOURCE_DIR}/axtls/source/ssl/ssl_gen_cert.c
        ${SOURCE_DIR}/axtls/source/ssl/ssl_loader.c
        ${SOURCE_DIR}/axtls/source/ssl/ssl_openssl.c
        ${SOURCE_DIR}/axtls/source/ssl/ssl_os_port.c
        ${SOURCE_DIR}/axtls/source/ssl/ssl_p12.c
        ${SOURCE_DIR}/axtls/source/ssl/ssl_platform.c
        ${SOURCE_DIR}/axtls/source/ssl/ssl_tls1.c
        ${SOURCE_DIR}/axtls/source/ssl/ssl_tls1_clnt.c
        ${SOURCE_DIR}/axtls/source/ssl/ssl_tls1_svr.c
        ${SOURCE_DIR}/axtls/source/ssl/ssl_x509.c

        ${SOURCE_DIR}/axtls/source/crypto/sha256.c
        ${SOURCE_DIR}/axtls/source/crypto/sha384.c
        ${SOURCE_DIR}/axtls/source/crypto/sha512.c
        ${SOURCE_DIR}/axtls/source/crypto/ssl_aes.c
        ${SOURCE_DIR}/axtls/source/crypto/ssl_bigint.c
        ${SOURCE_DIR}/axtls/source/crypto/ssl_crypto_misc.c
        ${SOURCE_DIR}/axtls/source/crypto/ssl_hmac.c
        ${SOURCE_DIR}/axtls/source/crypto/ssl_md5.c
        ${SOURCE_DIR}/axtls/source/crypto/ssl_rc4.c
        ${SOURCE_DIR}/axtls/source/crypto/ssl_rsa.c
        ${SOURCE_DIR}/axtls/source/crypto/ssl_sha1.c
        )

add_library(ssl STATIC ${MBEDTLS_SRC} )

target_compile_options(ssl  PRIVATE ${COMMON_FLAGS}  -DICACHE_FLASH -DMBEDTLS_CONFIG_FILE="mbedtls/esp_config.h"  ${WARNING_FLAGS} )
target_include_directories(ssl PUBLIC
        ${CMAKE_SOURCE_DIR}/include
        ${RTOS_DIR}/components/heap/include
        ${RTOS_DIR}/components/heap/port/esp8266/include
        ${RTOS_DIR}/components/ssl/mbedtls/port/openssl/include/internal
        ${RTOS_DIR}/components/ssl/mbedtls/port/openssl/include/openssl
        ${RTOS_DIR}/components/ssl/mbedtls/port/openssl/include/platform
        ${RTOS_DIR}/components/ssl/include
        ${RTOS_DIR}/components/ssl/mbedtls/mbedtls/include
        ${RTOS_DIR}/components/ssl/mbedtls/port/esp8266/include
        ${RTOS_DIR}/components/ssl/mbedtls/port/openssl/include
        ${RTOS_DIR}/components/bootloader_support/include
        ${RTOS_DIR}/components/cjson/include
        ${RTOS_DIR}/components/cjson/cJSON
        ${RTOS_DIR}/components/esp8266/include
        ${RTOS_DIR}/components/esp8266/include
        ${RTOS_DIR}/components/espos/include
        ${RTOS_DIR}/components/freertos/include
        ${RTOS_DIR}/components/freertos/include
        ${RTOS_DIR}/components/freertos/include/freertos
        ${RTOS_DIR}/components/freertos/include/freertos/private
        ${RTOS_DIR}/components/freertos/port/esp8266/include
        ${RTOS_DIR}/components/freertos/port/esp8266/include/freertos
        ${RTOS_DIR}/components/jsmn/include
        ${RTOS_DIR}/components/log/include
        ${RTOS_DIR}/components/lwip/include
        ${RTOS_DIR}/components/lwip/include/lwip/apps
        ${RTOS_DIR}/components/lwip/lwip/src/include
        ${RTOS_DIR}/components/lwip/port/esp8266/include
        ${RTOS_DIR}/components/lwip/lwip/src/include/posix
        ${RTOS_DIR}/components/mqtt/include
        ${RTOS_DIR}/components/mqtt/paho/MQTTClient-C/src
        ${RTOS_DIR}/components/mqtt/paho/MQTTClient-C/src/FreeRTOS
        ${RTOS_DIR}/components/mqtt/paho/MQTTPacket/src
        ${RTOS_DIR}/components/newlib/include
        ${RTOS_DIR}/components/newlib/newlib/include
        ${RTOS_DIR}/components/newlib/newlib/port/include
        ${RTOS_DIR}/components/nvs_flash/include
        ${RTOS_DIR}/components/smartconfig_ack/include
        ${RTOS_DIR}/components/spi_flash/include
        ${RTOS_DIR}/components/spiffs/include
        ${RTOS_DIR}/components/spiffs/include/spiffs
        ${RTOS_DIR}/components/tcpip_adapter/include
        ${RTOS_DIR}/components/tcpip_adapter/include
        ${RTOS_DIR}/components/util/include
        ${SOURCE_DIR}/mbedtls/port/esp8266
        ${SOURCE_DIR}/mbedtls/port/esp8266/include
        ${SOURCE_DIR}/mbedtls/port/openssl/source/library
        ${SOURCE_DIR}/mbedtls/port/openssl/source/platform
        ${SOURCE_DIR}/mbedtls/mbedtls/library/
        )